Fixed composer.json package name.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "lionare/facades",
+	"name": "eye-sports/facades",
 	"description": "Lionare supporting tools.",
 	"keywords": [ "Lionare", "Support" ],
 	"license": "MIT",
