--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   	},
 	"autoload-dev": {
     	"psr-4": {
-    		"": "tests"
+    		"Tests\\": "tests",
+    		"View\\Tests\\": "tests/View"
 		}
 	},
 	"config": {
